# Agent-Builder-Platform-

./: .gitignore  ARCHITECTURE.md  CURRENT.txt  DEPLOYMENT.md  E2E_TESTING_REPORT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  GUIDE.txt  PUSH_AND_MONITOR_GUIDE.md  QA_TESTING_PHASE4.md  README.md  REVIEW_SYSTEM_DOCUMENTATION.md  REVIEW_SYSTEM_QA_CHECKLIST.md  SANDBOX_GUIDE.md  SESSION_HANDOFF.md  STATUS.md  TAILSCALE_CONFIG_AUDIT.md  TESTING.md  TESTING_RESULTS.md  TODO.md  chat_qwen.py  docker-compose.yml  manual-test.sh  startup.txt  test-review-workflow.sh
.github/workflows/: ci.yml  docker-build.yml  (+1 more)
agent_framework/: README.md  __init__.py  pyproject.toml  run.py  start_server.sh  test_agent.py
agent_framework/cli/: __init__.py  main.py
agent_framework/config/: __init__.py  settings.py
agent_framework/core/: __init__.py  agent.py  message.py  task_planner.py  tool_registry.py
agent_framework/memory/: __init__.py  conversation_memory.py  memory_store.py
agent_framework/server/: __init__.py  api.py
agent_framework/tools/: __init__.py  bash.py  builtin.py  file_tools.py  search.py
client/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.js  static-server.js  tailwind.config.js  vite-migration-plan.md  vite.config.js
scripts/: README.md  ai-check.sh  ai-up.sh  aider-local.sh  dev-start.sh  dev-stop.sh  monitor-ci.sh  push-to-github.sh  validate.sh
server/: README.md  jest.config.json  package-lock.json  package.json
systemd/: cabp-client.service  cabp-server.service  install-systemd.sh
(+140 files in other folders)
